{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 302,
  "lineage": "ea112b5c-3678-efb4-d55d-16cda45eedf5",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4e593700943cade",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0c02106d953e25f96",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c02106d953e25f96",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Sara-eng54",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-004978880b3b458ec",
            "private_dns": "ip-10-0-1-245.eu-west-1.compute.internal",
            "private_ip": "10.0.1.245",
            "public_ip": "52.49.94.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0288b1a71f7327617",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06e9d95a1bc4e2a0e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbe680f75303310d",
            "tags": {
              "Name": "ENG54-Sara-terraform-tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06e9d95a1bc4e2a0e"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_group",
            "module.app.aws_subnet.app_subnet",
            "module.db.aws_instance.db_instance",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e80b7bb139fb38a5",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-06ed58d6e6fc4ef4e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ed58d6e6fc4ef4e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Sara-eng54",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-083e37c796006eb20",
            "private_dns": "ip-10-0-2-27.eu-west-1.compute.internal",
            "private_ip": "10.0.2.27",
            "public_ip": "3.250.123.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02135e15856f26f41",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e63dc6b05afee1aa",
            "tags": {
              "Name": "ENG54-Sara-terraform-sara_db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06e9d95a1bc4e2a0e"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_group",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway_id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-035d5c7c340a2d056",
            "owner_id": "135928476890",
            "tags": {
              "Name": "ENG54-Sara-terraform-ig"
            },
            "vpc_id": "vpc-09deddde6e9152d0d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/net/Sara-tf-lb/3f3820d934aa9605",
            "arn_suffix": "net/Sara-tf-lb/3f3820d934aa9605",
            "dns_name": "Sara-tf-lb-3f3820d934aa9605.elb.eu-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/net/Sara-tf-lb/3f3820d934aa9605",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "Sara-tf-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cbe680f75303310d"
              }
            ],
            "subnets": [
              "subnet-0cbe680f75303310d"
            ],
            "tags": {
              "Environment": "ENG54-Sara-terraform-production",
              "Name": "ENG54-Sara-terraform-tf-lb"
            },
            "vpc_id": "vpc-09deddde6e9152d0d",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_litsener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:listener/net/Sara-tf-lb/3f3820d934aa9605/9a72ef11574ebf2d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/Sara-tg-lb/4d128c2927746944",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:listener/net/Sara-tf-lb/3f3820d934aa9605/9a72ef11574ebf2d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:loadbalancer/net/Sara-tf-lb/3f3820d934aa9605",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_lb.app_lb",
            "module.app.aws_lb_target_group.lb_target_group",
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/Sara-tg-lb/4d128c2927746944",
            "arn_suffix": "targetgroup/Sara-tg-lb/4d128c2927746944",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:135928476890:targetgroup/Sara-tg-lb/4d128c2927746944",
            "lambda_multi_value_headers_enabled": false,
            "name": "Sara-tg-lb",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-09deddde6e9152d0d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_nacl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "id": "acl-02eaf8f4d193b7ce5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {
              "Name": "ENG54-Sara-terraform-sara_private_nacl"
            },
            "vpc_id": "vpc-09deddde6e9152d0d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public-nacl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e25989a2aa6ba330",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 3000
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.2.0/24",
                "from_port": 27107,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 150,
                "to_port": 27107
              },
              {
                "action": "allow",
                "cidr_block": "2.25.203.218/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 140,
                "to_port": 22
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {
              "Name": "ENG54-Sara-terraform-nacl"
            },
            "vpc_id": "vpc-09deddde6e9152d0d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0256e8245e0589ef7",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ENG54-Sara-terraform-private-route_table"
            },
            "vpc_id": "vpc-09deddde6e9152d0d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0beffd587279c631d",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035d5c7c340a2d056",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ENG54-Sara-terraform-route"
            },
            "vpc_id": "vpc-09deddde6e9152d0d"
          },
          "dependencies": [
            "aws_internet_gateway.gateway_id",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7e6816f3b1da3ac",
            "route_table_id": "rtb-0beffd587279c631d",
            "subnet_id": "subnet-0cbe680f75303310d"
          },
          "dependencies": [
            "aws_internet_gateway.gateway_id",
            "aws_vpc.app_vpc",
            "module.app.aws_route_table.public",
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093416d512c8622f6",
            "route_table_id": "rtb-0256e8245e0589ef7",
            "subnet_id": "subnet-0e63dc6b05afee1aa"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.db.aws_route_table.private",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-06e9d95a1bc4e2a0e",
            "description": "Allow 80 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e9d95a1bc4e2a0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sara-app_security_group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ENG54-Sara-terraform-tags"
            },
            "timeouts": null,
            "vpc_id": "vpc-09deddde6e9152d0d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-077ef4d273a432a58",
            "description": "Allows for traffic on Port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077ef4d273a432a58",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": " Allow port 27107 from public subnet",
                "from_port": 27107,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e9d95a1bc4e2a0e"
                ],
                "self": false,
                "to_port": 27107
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "Allow port 22 from public subnet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e9d95a1bc4e2a0e"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "Allow ports 1024 to 65535 from public subnet",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e9d95a1bc4e2a0e"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "db_security_group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ENG54-Sara-terraform-sara_db_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09deddde6e9152d0d"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0cbe680f75303310d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cbe680f75303310d",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "ENG54-Sara-terraform"
            },
            "vpc_id": "vpc-09deddde6e9152d0d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0e63dc6b05afee1aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0e63dc6b05afee1aa",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "ENG54-Sara-terraform-sara_private_subnet"
            },
            "vpc_id": "vpc-09deddde6e9152d0d"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-09deddde6e9152d0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af858c98ff279af2",
            "default_route_table_id": "rtb-0a248fcace103f734",
            "default_security_group_id": "sg-012788fd90d69beff",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09deddde6e9152d0d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a248fcace103f734",
            "owner_id": "135928476890",
            "tags": {
              "Name": "ENG-54-ENG54-Sara-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}